--- a/package.json
+++ b/package.json
@@ -16,13 +16,19 @@
         "postcss": "^8.1.14",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.63.6",
-        "sass-loader": "^12.6.0"
+        "sass-loader": "^12.6.0",
+        "vue-loader": "^15.9.8"
     },
     "dependencies": {
-        "node-sass": "^9.0.0",
-        "vue": "^3.3.4",
-        "vue-loader": "^17.2.2",
-        "vue-router": "^4.2.4",
+        "axios": "^0.21",
+        "laravel-mix": "^6.0.6",
+        "lodash": "^4.17.19",
+        "postcss": "^8.1.14",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.63.6",
+        "sass-loader": "^12.6.0",
+        "vue": "^2.6.12",
+        "vue-router": "^2.7.14",
         "vue-template-compiler": "^2.7.14"
     }
 }
